--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jim.jvm</groupId>
-    <artifactId>AbsoluteJava</artifactId>
+    <artifactId>java-core2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
