--- a/unittest/pom.xml
+++ b/unittest/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.jim.jvm</groupId>
-        <artifactId>AbsoluteJava</artifactId>
+        <artifactId>java-core2</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
