--- a/object-enhance/pom.xml
+++ b/object-enhance/pom.xml
@@ -7,11 +7,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.jim.jvm.logback</groupId>
-    <artifactId>logback-test</artifactId>
+    <groupId>com.jim.web</groupId>
+    <artifactId>object-enhance</artifactId>
     <packaging>jar</packaging>
 
-    <name>logback-test</name>
+    <name>object-enhance</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -25,22 +25,5 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.12</version>
-        </dependency>
-        <!--logback-->
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.5.3</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.3</version>
-        </dependency>
-
     </dependencies>
 </project>
