--- a/base/pom.xml
+++ b/base/pom.xml
@@ -7,11 +7,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.jim.jvm.logback</groupId>
-    <artifactId>logback-test</artifactId>
+    <groupId>com.jim.web</groupId>
+    <artifactId>base</artifactId>
     <packaging>jar</packaging>
 
-    <name>logback-test</name>
+    <name>base</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -19,12 +19,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -41,6 +35,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
